hygieia-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hygieia-api-svc
  name: hygieia-api-svc
  namespace: hygieia
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hygieia-api
  type: ClusterIP
status:
  loadBalancer: {}
