hygieia-collector-gihub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hygieia-github
  name: hygieia-github
  namespace: hygieia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hygieia-github
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hygieia-github
    spec:
      containers:
      - image: devtesthygieiaacr.azurecr.io/hygieia/github-collector
        name: hygieia-github
        env:
        - name: MONGODB_HOST
          valueFrom:
            configMapKeyRef:
              name: mongo-config
              key: mongosvc 
        - name: MONGODB_PORT
          valueFrom:
            configMapKeyRef:
              name: mongo-config
              key: mongoport
        - name: HYGIEIA_API_ENV_SPRING_DATA_MONGODB_USERNAME
          valueFrom:
            configMapKeyRef:
              name: mongo-config
              key: mongouser
        - name: HYGIEIA_API_ENV_SPRING_DATA_MONGODB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mongo-secret
              key: dbuserpwd
        - name: GITHUB_KEY
          valueFrom:
            secretKeyRef:
              name: api-secret
              key: apikey
        - name: PERSONAL_ACCESS_TOKEN
          valueFrom:
            secretKeyRef:
              name: github-token
              key: patoken
        resources: {}
status: {}
