hygieia-ui-svc-ci.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hygieia-ui-svc-ci
  name: hygieia-ui-svc-ci
  namespace: hygieia
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hygieia-ui
  type: ClusterIP
status:
  loadBalancer: {}
