hygieia-ui-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hygieia-ui-svc
  name: hygieia-ui-svc
  namespace: hygieia
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector:
    app: hygieia-ui
  type: NodePort
status:
  loadBalancer: {}
