orig-ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    INGRESS.kubernetes.io/rewrite-target: /
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"INGRESS.kubernetes.io/rewrite-target":"/"},"name":"test-ingress","namespace":"ci-defect-prediction"},"spec":{"rules":[{"host":"test-code-intelligence.azurewebsites.net","http":{"paths":[{"backend":{"serviceName":"model-experiment-controller","servicePort":80},"path":"/foo"}]}}]}}
  creationTimestamp: "2019-04-10T20:40:53Z"
  generation: 2
  name: test-ingress
  namespace: ci-defect-prediction
  resourceVersion: "109877326"
  selfLink: /apis/extensions/v1beta1/namespaces/ci-defect-prediction/ingresses/test-ingress
  uid: ef552903-5bd0-11e9-b5b5-0a58ac1f154f
spec:
  rules:
  - host: test-code-intelligence.azurewebsites.net
    http:
      paths:
      - backend:
          serviceName: model-experiment-controller
          servicePort: 80
        path: /foo
status:
  loadBalancer:
    ingress:
    - ip: 10.255.58.132
    - ip: 10.255.58.194
